<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hilfe"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tVHilfe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"

            android:text="@string/TitelHilfe"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#2c3e50"/>


        <ImageView
            android:id="@+id/hilfeheader"
            android:layout_width="203dp"
            android:layout_height="265dp"
            android:layout_below="@+id/tVHilfe"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/hilfeheader"/>

        <TextView
            android:id="@+id/tVErläuterungTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitelErläuterung1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/hilfeheader"
            android:background="@drawable/rounded_view"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tVErläuterung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/Definition"
            android:layout_below="@+id/tVErläuterungTitel" />

        <TextView
            android:id="@+id/tVFormelTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitelFormel"
            android:layout_below="@+id/tVErläuterung"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_view"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/iVFormel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/formel"
            android:layout_below="@+id/tVFormelTitel"/>

        <TextView
            android:id="@+id/tVErläuterungFormelTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitelForme2"
            android:layout_below="@+id/iVFormel"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_view"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tVErläuterungFormel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/TextBeispiel"
            android:layout_below="@+id/tVErläuterungFormelTitel" />

        <TextView
            android:id="@+id/tVErläuterungFormel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/TextFrage"
            android:textStyle="italic"
            android:layout_below="@+id/tVErläuterungFormel" />

        <ImageView
            android:id="@+id/iVberechnung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/beispielrechnung"
            android:layout_below="@id/tVErläuterungFormel2"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tVErgebnisBeispiel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/TextErgebnis"
            android:layout_below="@+id/iVberechnung" />


        <Button
            android:id="@+id/b_verlauf_startseite"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/ButtonBerechnungNeu"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tVErgebnisBeispiel"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/cornered_orange_button" />

        <Button
            android:id="@+id/SVerlaufButton2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/ButtonVerlauf"
            android:layout_below="@+id/b_verlauf_startseite"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/cornered_orange_button"
            android:layout_marginBottom="25dp"/>

    </RelativeLayout>
</ScrollView>
