<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tV_ergebnis_titel"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"

        android:text="@string/TitelErgebnis"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#2c3e50"/>

    <ImageView
        android:id="@+id/iV_activityErgebnis_helpIcon"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="165dp"
        android:layout_toEndOf="@+id/tV_ergebnis_titel"

        android:src="@drawable/help"
        android:clickable="true"
        android:onClick="onClick"/>

    <ImageView
        android:id="@+id/iV_ergebnis_header"

        android:layout_width="203dp"
        android:layout_height="265dp"
        android:layout_centerHorizontal="true"

        android:layout_below="@+id/tV_ergebnis_titel"
        android:src="@drawable/ergebnisheader" />

    <TextView
        android:id="@+id/tV_ergebnis_ergebnis"

        android:layout_marginTop="-60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/iV_ergebnis_header"

        android:textSize="40sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/rounded_view" />

    <RelativeLayout
        android:id="@+id/rL_ergebnis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/tV_ergebnis_ergebnis"
        android:background="@drawable/rounded_view_ergebnis">

        <TextView
            android:id="@+id/tV_ergebnis_darlehenssumme"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"

            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tV_ergebnis_zinssatz"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tV_ergebnis_darlehenssumme"

            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tV_ergebnis_laufzeit"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/tV_ergebnis_zinssatz"

            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

    <Button
        android:id="@+id/b_ergebnis_neueBerechnung"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/b_ergebnis_zeigeVerlauf"

        android:text="@string/ButtonBerechnung"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"

        android:background="@drawable/cornered_orange_button" />

    <Button
        android:id="@+id/b_ergebnis_zeigeVerlauf"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"

        android:background="@drawable/cornered_orange_button"
        android:text="@string/ButtonVerlauf"
        android:textColor="@android:color/white"
        android:textSize="20sp"

        android:textStyle="bold"/>

    </RelativeLayout>

